# backend/src/router/candidateReg.router.js
@@ -1,8 +1,9 @@
 import {Router} from "express";
-import {registration,loginCandidate} from "../controllers/candidateRegistration.controller.js"
+import {registration,loginCandidate,sendVerificationCode} from "../controllers/candidateRegistration.controller.js"
 
 const router = Router();
 
 router.route("/first-registration").post(registration);
 router.route("/login").post(loginCandidate);
+router.route("/send-Otp").post(sendVerificationCode);
 export default router;
